src/objects/Types_of_Rooms__c.object
<CustomObject>
    <fields>
        <fullName>ToatalLuxuryRooms__c</fullName>
        <label>ToatalLuxuryRooms</label>
        <summaryFilterItems>
            <field>Category__c.RoomType__c</field>
            <operation>equals</operation>
            <value>Luxury</value>
        </summaryFilterItems>
        <summaryForeignKey>Category__c.Availability__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ToatalRooms__c</fullName>
        <formula>ToatalLuxuryRooms__c+TotalVipRooms__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ToatalRooms</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalVipRooms__c</fullName>
        <label>TotalVipRooms</label>
        <summaryFilterItems>
            <field>Category__c.RoomType__c</field>
            <operation>equals</operation>
            <value>VipRoom</value>
        </summaryFilterItems>
        <summaryForeignKey>Category__c.Availability__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Availability</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Types of Rooms Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Availability</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>